# virion-core

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh  virion.sh
.github/workflows/: rust.yml
config/: client.yaml  example.yaml  relay.yaml  server.yaml
src/: config.rs  main.rs
src/crypto/: chacha.rs  handshake.rs  mod.rs
src/protocol/: framing.rs  mod.rs  packet.rs
src/transport/: mod.rs  router.rs  tcp.rs  udp.rs
systemd/: virion-client.service  virion-relay.service  virion-server.service
