[package]
name = "virion-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.5", features = ["derive"] }
chacha20poly1305 = "0.10"
x25519-dalek = "2.0"
rand_core = "0.6"
log = "0.4"
env_logger = "0.11"
blake3 = "1.5"
